# type2network

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: dns.rs  ntp.rs
examples__/: dns.rs  ntp.rs
sample/: Cargo.toml
sample/src/: main.rs
src/: additional.rs  cell.rs  composed.rs  error.rs  foo.rs  generics.rs  lib.rs  net.rs  primitive.rs
tests/: enum_tests.rs  integration_tests.rs  struct_tests.rs
type2network_derive/: Cargo.toml
type2network_derive/src/: enum_builder.rs  generics.rs  lib.rs  struct_builder.rs  syn_utils.rs  visitor.rs
type2network_derive/src/enum/: from.rs  mod.rs  to.rs
type2network_derive/src/struct/: from.rs  mod.rs  to.rs
