[package]
name = "type2network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
type2network_derive = { path = "./type2network_derive" }

[dev-dependencies]
enum_from = { git = "https://github.com/dandyvica/enum_from.git" }
