[package]
name = "type2network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
type2network_derive = { path = "./type2network_derive" }
either = "1.9.0"
bytes = "1.5.0"

[dev-dependencies]
enum_from = { git = "https://github.com/dandyvica/enum_from.git" }
serde = { version = "1.0.195", features = [ "derive" ] }

[[example]]
name = "ntp"
src = "examples/ntp.rs"

[[example]]
name = "dns"
src = "examples/dns.rs"


