[package]
name = "type2network"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/dandyvica/type2network"
repository = "https://github.com/dandyvica/type2network"
description = "a crate for converting user-defined structs or enums to bigendian data buffers"
license = "MIT OR Apache-2.0"
keywords = ["bigendian", "network"]

[dependencies]
byteorder = "1.5.0"
type2network_derive = { path = "./type2network_derive" }
either = "1.9.0"
bytes = "1.5.0"

[dev-dependencies]
num_enum = "0.7.3"
serde = { version = "1.0.195", features = [ "derive" ] }


[[example]]
name = "ntp"
src = "examples/ntp.rs"

[[example]]
name = "dns"
src = "examples/dns.rs"


