[package]
name = "type2network_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", features = ["full", "extra-traits", "visit", "parsing"] }
quote = "1.0.33"
proc-macro2 = "1.0.69"
syn-utils = { git = "https://github.com/dandyvica/syn-utils"}

